# MAG2305-1D

./: .gitignore  README.md  pyproject.toml  quickstart.py
core/: Constants.py  MAG2305_1D.py  MAG2305_1Dlayers.py  MagBar_module.py  Matter.py  MinPath.py  SoftHard_module.py  Solver.py  Wrappers.py  Wrappers_Funcs.py  mmSample.py
demos/: DW_form_by_Hext_fntsoft.py  DW_form_by_Hext_infsoft.py  DW_move_from_saddle_fntsoft.py  DW_move_from_saddle_infsoft.py  thermal_reversal.py
demos_magbar/: DW_move_from_saddle_infbar.py  thermal_reversal.py
demos_magbar/data_rseed19/: args.txt
demos_magbar/utils/: info.py  plot.py
demos_minpath/: minpath_magbar.py  minpath_softhard.py
demos_minpath/data_magbar/: args.txt
demos_minpath/data_softhard/: args.txt
demos_minpath/utils/: plot.py
demos_softhard/: DW_form_by_Hext_fntsoft.py  DW_form_by_Hext_infsoft.py  DW_move_from_saddle_fntsoft.py  DW_move_from_saddle_infsoft.py  thermal_reversal.py
demos_softhard/utils/: plot.py
