[project]
name = "MAG2305-1D"
version = "0.1.0"
description = "FDM simulator for 1D micromagnetics"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pyqt6>=6.9.1",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
